初始化配置项